--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "mongod": "^2.0.0",
     "mongodb": "^3.0.5"
   },
   "devDependencies": {
