--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "view"
   ],
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
     "ejs": "^2.5.8",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongod": "^2.0.0",
-    "mongodb": "^3.0.5"
+    "mongodb": "^3.0.5",
+    "slug": "^0.9.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
