--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "hast-util-to-string": "^1.0.1",
     "mass-converter": "^0.1.1",
     "moment": "^2.20.1",
+    "nodemon": "^1.17.3",
     "nyc": "^11.4.1",
     "postcss-cli": "^4.1.1",
     "rehype-parse": "^4.0.0",
@@ -56,7 +57,7 @@
     "xo": "^0.18.2"
   },
   "scripts": {
-    "start": "node server",
+    "start": "nodemon server",
     "lint:js": "xo",
     "lint:css": "stylelint src/index.css",
     "lint:md": "remark . -qf",
