--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "version": "1.0.0",
   "description": "Simple dating site, where people are matched by their bucketlists",
   "license": "MIT",
-  "keywords": ["dating site, bucketlist"],
+  "keywords": [
+    "dating site, bucketlist"
+  ],
   "repository": "be-assessment-2",
   "author": "Chelsea Doeleman",
-  "files": [
-    "db",
-    "server",
-    "src",
-    "static",
-    "view"
-  ],
   "dependencies": {
     "argon2": "^0.17.3",
     "body-parser": "^1.18.2",
@@ -22,20 +17,13 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongod": "^2.0.0",
-    "mongodb": "^3.0.5"
+    "mongodb": "^3.0.5",
+    "multer": "^1.3.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
   },
   "scripts": {
-    "start": "nodemon server",
-    "lint:css": "stylelint src/index.css",
-    "lint:md": "remark . -qf",
-    "lint": "npm run lint:js && npm run lint:css && npm run lint:md",
-    "build:css": "postcss src/index.css > static/index.css",
-    "build:md": "remark . -qfo",
-    "build": "npm run build:js && npm run build:css",
-    "test": "node test",
-    "test-coverage": "nyc --reporter lcov tape test.js"
+    "start": "nodemon server"
   }
 }
